<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Challenge1Activity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_ch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffff">

                <ImageView
                    android:background="@drawable/ch_img"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"></ImageView>
<!--                <Button-->
<!--                    android:id="@+id/but1"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="80dp"-->
<!--                    android:layout_marginTop="10dp"-->
<!--                    android:layout_marginLeft="10dp"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:textColor="#ffff"-->
<!--                    android:textSize="20sp"-->
<!--                    android:background="@drawable/shape"-->
<!--                    android:textStyle="bold"-->
<!--                    android:text="CHALLENGE3 SUGGESTION"-->
<!--                    />-->

                <Button
                    android:id="@+id/but_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#ffff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"
                    android:text="@string/activity11"
                    />
                <Button
                    android:id="@+id/but_2"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/activity12"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"></Button>
                <Button
                    android:id="@+id/but_ch_3"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"
                    android:text="@string/activity13"
                    />
                <Button
                    android:id="@+id/but_ch1_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"
                    android:text="@string/activity14"
                    />
                <Button
                    android:id="@+id/but_ch2_3"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"
                    android:text="@string/activity15"
                    />
                <Button
                    android:id="@+id/but_ch3_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"
                    android:text="@string/activity16"
                    />
                <Button
                    android:id="@+id/but_ch4_3"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"
                    android:text="@string/activity17"
                    />
                <Button
                    android:id="@+id/but_ch5_3"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"
                    android:text="@string/activity18"
                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>