<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallengeActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lin_ch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffff">

            <ImageView
                android:background="@drawable/suggest"
                android:layout_width="match_parent"
                android:layout_height="170dp"></ImageView>
            <Button
                android:id="@+id/btn_challege1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffff"
                android:textSize="20sp"
                android:background="@drawable/shape"
                android:textStyle="bold"
                android:text="@string/activity1"
               />
            <Button
                android:id="@+id/btn_challege2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/activity6"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="@drawable/shape"
                android:textStyle="bold"></Button>
            <Button
                android:id="@+id/btn_challege3"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="@drawable/shape"
                android:textStyle="bold"
                android:text="@string/activity10"
                />
            <Button
            android:id="@+id/btn_challege4"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#fff"
                android:background="@drawable/shape"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/act1"
            />

</LinearLayout>
    </ScrollView>
    </LinearLayout>
</RelativeLayout>

