<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Challenge1Activity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_ch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffff">

                <ImageView
                    android:background="@drawable/trainsutilize"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"></ImageView>

<!--                <Button-->
<!--                    android:id="@+id/but"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="80dp"-->
<!--                    android:layout_marginTop="10dp"-->
<!--                    android:layout_marginLeft="10dp"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:textColor="#ffff"-->
<!--                    android:textSize="20sp"-->
<!--                    android:background="@drawable/shape"-->
<!--                    android:textStyle="bold"-->
<!--                    android:text="CHALLENGE4 SUGGESTIONS"-->
<!--                    />-->
                <Button
                    android:id="@+id/button_ch4_1"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#ffff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"
                    android:text="@string/act2"
                    />
                <Button
                    android:id="@+id/button_ch4_2"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/act3"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"></Button>
                <Button
                    android:id="@+id/button_ch4_3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/shape"
                    android:textStyle="bold"
                    android:text="@string/act4"
                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>