<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_des"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/distancemake"
        ></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/linear_below"
        android:layout_below="@+id/img_des">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_socdist_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/socdist_1"/>
                <TextView
                    android:id="@+id/text_socdist_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:text="@string/socdist_2"/>
                <TextView
                android:id="@+id/text_socdist_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                    android:textStyle="bold"
                android:text="@string/socdist_3"/>
                <TextView
                    android:id="@+id/text_socdist_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:text="@string/socdist_4"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
<LinearLayout
    android:id="@+id/linear_below"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_weight="1">
        <ImageView
            android:id="@+id/image_menumd"
            android:layout_width="wrap_content"
            android:background="@drawable/ic_menu_black_24dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Seggestions"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/image_live"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_live_tv_black_24dp"
            android:layout_height="wrap_content"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="News" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/img_maindis_near"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_near_me_black_24dp"
            android:layout_height="wrap_content"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Nearme"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/image_disMain_share"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_share_black_24dp"
            android:layout_height="wrap_content"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Share"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>


</LinearLayout>


</RelativeLayout>
